src/App.css
.main {
  text-align: center;
  padding: 10px;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  float: left;
  height: 50px;
}

.App-header {
  background-color: grey;
  position: fixed;
  top: 0;
  height: 50;
  width: 100%;
}

.NavBar {
  float: right;
  display: block;
  text-align: center;
  padding: 10px 15px;
}

.main {
  padding-top: 25px;
}


.heroImage-container {
  background-color: black;
  padding: 20px;
}

.heroImage {
  height: 500px;
  width: 100%;
}

.text {
  padding: 20px;
}

.footer {
  right: 0;
  bottom: 0;
  left: 0;
    padding: 1rem;
  height: 50px;
  background-color: grey;
}

.footer-links{
  font-size: 10px;
  float: right;
  text-align: left;
}

.footer-links a:first-child{
    margin-right: 5px;

}

.footer-logo {
  animation: App-logo-spin infinite 20s linear;
  float: left;
  height: 20px;
}




@media only screen and (max-width: 495px){
  #reduceHeight {
    height: 300px;
  }
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

